Added Screenshot functionality on failed tests and SoftUni test fixed

--- a/AutomationPractice/AutomationPractice.csproj
+++ b/AutomationPractice/AutomationPractice.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\DemoQA\DemoQA.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Screenshots\" />
+  </ItemGroup>
+
 </Project>
