--- a/DemoQA/DemoQA.csproj
+++ b/DemoQA/DemoQA.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="83.0.4103.3900" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Screenshots\" />
+  </ItemGroup>
+
 </Project>
